--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body class="mt-20">
     <div id="root"></div>
     <script src="node_modules/flowbite/dist/flowbite.min.js"></script>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+    <script type="module" src="src/main.jsx"></script>
+   </body>
 </html>
